<resources>
    <string name="app_name">Question paper App</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">We are great to have you at our platform</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="upload_btn">Upload</string>
    <string name="choose_btn">Choose file</string>
    <string name="create_btn">Create</string>
    <string name="logout_btn">Logout</string>
    <string name="verifytext_btn">Please verify your email</string>
    <string name="verify_btn">Verify</string>
</resources>