<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/regis">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textColor="#FFFFFF"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/indigo_daisy"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag"
        android:textSize="17sp"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"/>

    <EditText
        android:id="@+id/regfullname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:textColor="#FFFFFF"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/your_name"
        android:textColorHint="#FFFFFF"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/regemail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/e_mail"
        android:textColorHint="#FFFFFF"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/regpassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/password"
        android:textColorHint="#FFFFFF"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/regrepassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:textColor="#FFFFFF"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/re_type_password"
        android:textColorHint="#FFFFFF"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_custom"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="25dp"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:text="@string/login"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_left"
            android:layout_above="@id/swipeLeft"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/swipeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe_right_for_login"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/roboto_regular"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"/>

    </RelativeLayout>

</LinearLayout>