<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/btn_verifytext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="687dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/verifytext_btn"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/verify_btn"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="400dp"
        android:layout_marginRight="20dp"
        android:background="#B2135A"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/upload_btn"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_upload"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="46dp"
        android:layout_marginRight="20dp"
        android:background="#B2135A"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/create_btn"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_upload"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="174dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/logout_btn"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />




</RelativeLayout>